@@ -58,6 +58,7 @@
  * added a 'list "pushdirr"' command, working like "pushdir" but recursive (r746*)
  * the _fbfont variable will contain the current console font file string (r767*)
  * if _want_exif_orientation is set, images will be reoriented according to EXIF metadata (r769!*)
+ * mirror/flip is now being applied with respect to the viewport borders (r772*)
 
                 Version 0.4
 
